# genome_counter

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml  notebook.jl
benches/: count.rs  my_benchmark.rs
src/: lib.rs
