[package]
name = "counter"
version = "0.1.0"
authors = ["ambiso <ambiso@invalid>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "*"

[[bench]]
name = "my_benchmark"
harness = false

[profile.test]
debug = true
opt-level = 1


