[package]
name = "counter"
version = "0.1.0"
authors = ["ambiso <ambiso@invalid>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "count"
harness = false

[profile.test]
debug = true
opt-level = 1


