[package]
name = "genome_counter"
version = "0.2.0"
authors = ["ambiso <ambiso@invalid>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Count frequency of the letters ACGT in a genome using SIMD and parallelism"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_simd = { version = "0.3.5", package = "packed_simd_2" }
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "count"
harness = false

[profile.test]
debug = true
opt-level = 1


